--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "browserify": "^13.0.0",
     "get-browser-rtc": "^1.0.2",
+    "isomorphic-fetch": "^2.2.1",
+    "recordrtc": "^5.3.4",
     "signalhub": "^4.3.2",
     "simple-peer": "^6.0.3"
   },
